01-Apr-2015 Laurent Duflot
	* adapt to SUSYTools-00-05-25 --> few permil on ref ttbar sample
	* launch_jobs_on_grid.py: extract run period from input dataset
	* tag ZeroLeptonRun2-00-00-23

01-Apr-2015 Laurent Duflot
	* adapt to SUSYTools-00-05-23 --> few % on ref ttbar sample
	* PileUpRWProcessor, BuildSUSYObjects, ZeroLeptonDataDrivenQCD, ZeroLeptonSystVariations: change record<blah>(blah*) to record(blah*)
	* revision 658398

31-Mar-2015 Laurent Duflot
	* work in progress to adapt to SUSYTools-00-05-23
	* BuildSUSYObjects: set the Is8TeV SUSYObjDef property
	* PhysObjProxies, PhysObjProxyUtils, PhysObjProxyFiller, BuildSUSYObjects: change decorations from bool to char


31-Mar-2015 Laurent Duflot
	* adapt to SUSYTools-00-05-20 --> no change on ref ttbar sample
	* revision 658249

31-Mar-2015 Laurent Duflot
	* adapt to SUSYTools-00-05-19 --> few % on ref ttbar sample
	* ZeroLeptonRunPeriod: add p13tev
	* ZeroLeptonSR, ZeroLeptonCRWT: make p13tev the default period,
	remove mT2 from OxbridgeKinetics
	* PhysObjProxyUtils: remove mT2 calculation
	* Makefile.RootCore: remove OxbridgeKinetics
	* BuildSUSYObjects: b-tagging depends on run period
	* revision 658235

31-Mar-2015 Laurent Duflot
	* adapt to SUSYTools-00-05-17 --> no change on ref ttbar sample
	* revision 658149

30-Mar-2015 Laurent Duflot
	* FilterUpdateMerge.py: merge counters with luminosity/xsection weights
	* tag ZeroLeptonRun2-00-00-22

20-Mar-2015 Laurent Duflot
	* PileUpRWProcessor: also test for run 222250 for 13TeV MC (50ns)

19-Mar-2015 Laurent Duflot
	* ZeroLeptonCRWT, ZeroLeptonNTVars: fill CRWT specific variables

17-Mar-2015 Laurent Duflot
	* BuildSUSYObject: set SUSYObjDef tau term to blank to remote taus from MET
	* PhysObjProxyFiller: Eta cut at 2.8 only applies to good jets
	* getMCInfo.py: point by default to the 13TeV cross-section file
	* makeDatasetList.py: add qL->h in signal samples

13-Mar-2015 Laurent Duflot
	* tag ZeroLeptonRun2-00-00-21

13-Mar-2015 Nikola Makovec